--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 fastapi
-uvicorn
+uvicorn[standard]
+websockets
 chromadb
 sentence-transformers
 ollama
@@ -8,3 +9,4 @@ pypdf
 chardet
 hypothesis
 pytest
+httpx
