--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Groq API Configuration (free cloud API for fast responses)
 # Get your API key from: https://console.groq.com/
-USE_GROQ=true
-GROQ_API_KEY=your_groq_api_key_here
+USE_GROQ=false
+GROQ_API_KEY=
 GROQ_MODEL=llama-3.1-70b-versatile
 
 # Ollama Configuration (local models)
@@ -13,6 +13,5 @@ OLLAMA_VISION_MODEL=qwen3-vl:8b
 EMBEDDING_MODEL=qwen3-embedding:8b
 
 # Raspberry Pi Sync Configuration
-# Configure these to sync processed data to your Raspberry Pi
-PI_HOST=pi@raspberrypi.local
-PI_PATH=/home/pi/docubot/data/
+PI_HOST=hws@192.168.1.139
+PI_PATH=/home/hws/docubot/data/
