changed embedding engine

--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ OLLAMA_MODEL=qwen2.5:7b
 OLLAMA_VISION_MODEL=qwen3-vl:8b
 
 # Embedding Model (always local)
-EMBEDDING_MODEL=qwen3-embedding:8b
+EMBEDDING_MODEL=bge-m3
 
 # Raspberry Pi Sync Configuration
 PI_HOST=hws@192.168.1.139
