--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ GROQ_MODEL=llama-3.1-70b-versatile
 
 # Ollama Configuration (local models)
 OLLAMA_ENDPOINT=http://localhost:11434
-OLLAMA_MODEL=exaone3.5:2.4b
+OLLAMA_MODEL=qwen2.5:1.5b
 OLLAMA_VISION_MODEL=qwen3-vl:8b
 
 # Embedding Model (always local)
